--- a/index.html
+++ b/index.html
@@ -6,19 +6,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Pompiere|Quicksand&display=swap" rel="stylesheet">
-
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- Latest compiled JavaScript -->
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> 
 
     <link rel="stylesheet" href="cssjs/main.css">
     <script src="cssjs/main.js"></script>
     <title>Jacobi's Method</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Pompiere|Quicksand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bad+Script|Poiret+One|Satisfy&display=swap" rel="stylesheet">
 </head>
 
