--- a/index.html
+++ b/index.html
@@ -120,6 +120,6 @@
     <span class="btn btn-default" id="totop"> <a href="#header">Top</a></span>
     <footer>
         Email: ghuywithissues@gmail.com <br>
-        <span id="request-wrapper">If you've got any computer related issues not hesitate to email ghuywithissues@gmail.com</span>
+        <span id="request-wrapper">If you've got any related issues, don't hesitate to email the ghuywithissues@gmail.com</span>
     </footer>
 </body>
