--- a/index.html
+++ b/index.html
@@ -103,6 +103,13 @@
                     </div>
 
                     <div class="outpout">
+						<div class="subject" id="mrcal">
+                            <div class="topic">Calculating ... </div>
+                            <div class="definition">
+								<img alt="calculating" src="img/mr. cal.gif" width="270px" height="270px"/> <br>
+								Please wait!
+                            </div>
+                        </div>
                         <div class="subject">
                             <div class="topic">Results Table</div>
                             <div class="definition">
