--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="header">
         <div class="container">
             <div id="site-signature">
-                <span class="math-function">f(x)</span> == <span class="code-function">double f(double x)</span>
+                <span class="math-function">f(x)</span> == <span class="code-function">double f( x)</span>
             </div>
             <div id="quickaccess">
                 <a href="#input">Jump to calculator</a>
